修复 GitHub Actions 构建错误，更新 build.yml and pom.xml